--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
-﻿/BCarnellChars/bin/Debug/netstandard2.0
-/BCarnellChars/bin/Release/netstandard2.0
-/BCarnellEditor/bin/Debug/netstandard2.1
-/BCarnellEditor/bin/Release/netstandard2.1
-/BCarnellTimes/bin/Debug/netstandard2.0
-/BCarnellTimes/bin/Release/netstandard2.0
-/BCarnellEndless/bin/Debug/netstandard2.0
-/BCarnellEndless/bin/Release/netstandard2.0
-/BCarnellChars/obj/Debug/netstandard2.0
-/BCarnellChars/obj/Release/netstandard2.0
-/BCarnellEditor/obj/Debug/netstandard2.1
-/BCarnellEditor/obj/Release/netstandard2.1
-/BCarnellTimes/obj/Debug/netstandard2.0
-/BCarnellTimes/obj/Release/netstandard2.0
-/BCarnellEndless/obj/Debug/netstandard2.0
-/BCarnellEndless/obj/Release/netstandard2.0
+﻿/BCarnellChars/bin/Debug/
+/BCarnellChars/bin/Release/
+/BCarnellEditor/bin/Debug/
+/BCarnellEditor/bin/Release/
+/BCarnellTimes/bin/Debug/
+/BCarnellTimes/bin/Release/
+/BCarnellEndless/bin/Debug/
+/BCarnellEndless/bin/Release/
+/BCarnellChars/obj/Debug/
+/BCarnellChars/obj/Release/
+/BCarnellEditor/obj/Debug/
+/BCarnellEditor/obj/Release/
+/BCarnellTimes/obj/Debug/
+/BCarnellTimes/obj/Release/
+/BCarnellEndless/obj/Debug/
+/BCarnellEndless/obj/Release/
 /BCarnellChars/alexbw145.baldiplus.bcarnellchars
 /BCarnellEditor/mtm101.rulerp.baldiplus.leveleditor
