Refresher + API 4.0 port

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /BCarnellEndless/obj/Release/
 /BCarnellChars/alexbw145.baldiplus.bcarnellchars
 /BCarnellEditor/mtm101.rulerp.baldiplus.leveleditor
+/BCarnellTeacher
