--- a/BCarnellEndless/BCarnellEndless.csproj
+++ b/BCarnellEndless/BCarnellEndless.csproj
@@ -28,7 +28,7 @@
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Baldi's Basics Plus\BALDI_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="BaldiEndless">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Baldi's Basics Plus\BepInEx\plugins\BaldiEndless.dll</HintPath>
+      <HintPath>..\lib\BaldiEndless.dll</HintPath>
     </Reference>
     <Reference Include="MTM101BaldAPI">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Baldi's Basics Plus\BepInEx\plugins\MTM101BaldAPI.dll</HintPath>
